--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,56 +13,19 @@
 
       <h1>NHS App prototype</h1>
       <p class="nhsuk-lede-text">
-        A prototype to test new design components and patterns for the NHS App.
+        A prototype to test new design components and patterns for the NHS.
       </p>
 
-      <ul clas="nhsuk-list">
-        <li>
-          <a href="/pages/">Pages</a>
-        </li>
-        <li>
-          <a href="/components/">Components</a>
-        </li>
-        <li>
-          <a href="/native">Make your prototype feel more app-like</a>
-        </li>
-        <li>
-          <a href="/frame">View prototype in a mobile frame</a>
-        </li>
-      </ul>
-
-      <h2>Custom prototype settings</h2>
-      <p><a href="/data-settings">View or change the prototype settings</a>.</p> 
-
-      <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible app-section-break--width-4">
-
-      <h2>Built using</h2>
-
-      {{ summaryList({
-        rows: [
+      {{ nhsappCardGroup({
+        stacked: true,
+        cards: [
           {
-            key: {
-              text: "NHS prototype kit"
-            },
-            value: {
-              html: "<a href='https://github.com/nhsuk/nhsuk-prototype-kit/releases'><span class='nhsuk-u-visually-hidden'>NHS prototype kit </span>v5.3.0</a>"
-            }
+            title: "Latest prototype",
+            href: "/v2/index"
           },
           {
-            key: {
-              text: "NHS.UK frontend"
-            },
-            value: {
-              html: "<a href='https://github.com/nhsuk/nhsuk-frontend/releases'><span class='nhsuk-u-visually-hidden'>NHS.UK frontend </span>v9.6.2</a>"
-            }
-          },
-          {
-            key: {
-              text: "NHS App frontend"
-            },
-            value: {
-              html: "<a href='https://github.com/nhsuk/nhsapp-frontend/releases'><span class='nhsuk-u-visually-hidden'>NHS App frontend </span>v4.0.0</a>"
-            }
+            title: "Latest prototype in phone frame (demo)",
+            href: "/frame"
           }
         ]
       }) }}
