--- a/app/views/frame.html
+++ b/app/views/frame.html
@@ -4,12 +4,10 @@
 
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
+{% block header %}
+{% endblock %}
+
 {% block beforeContent %}
-  {{ backLink({
-    "text": "Back",
-    "classes": "nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0",
-    href: "/"
-  }) }}
 {% endblock %}
 
 {% block content %}
