--- a/app/views/v2/another-question.html
+++ b/app/views/v2/another-question.html
@@ -9,7 +9,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-      <form method="post" action="/v2/answer">
+      <form method="post" action="/v2/answer2">
 
         <h1>Confirm you don't need emergency care</h1>
 
