--- a/app/views/v2/mri/index.html
+++ b/app/views/v2/mri/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     
-  <a id="ios-notification" class="ios-notification" href="/v1/mri/third-message">
+  <a id="ios-notification" class="ios-notification" href="/v2/mri/message">
     <img class="ios-notification-icon" src='/images/nhs-icon-512.png' alt="">
     <div class="ios-notification-message">
       <div class="ios-notification-app">NHS App</div>
