fix content on headache care hub

--- a/app/views/v2/diary/index.html
+++ b/app/views/v2/diary/index.html
@@ -33,7 +33,7 @@
             headingText: "Headache care"
         }) }}
         
-        <p>Check in with the NHS App so we can get you the right care, right away</p>
+        <p>Manage and track your ongoing treatment for headaches</p>
         <a href="/v2/diary/hub" style="margin-bottom: 1rem;width:auto;" role="button" class="nhsuk-button nhsuk-button--reverse">See headache diary</a>
     </div>
     
