--- a/app/views/v2/gphelp/message.html
+++ b/app/views/v2/gphelp/message.html
@@ -24,12 +24,18 @@
 
       <div class="nhsuk-u-margin-bottom-7">
 
+        <small>Dr Patel, (GP)</small>
         <div class="message-container">
           <p>Hi Alex,</p>
           <p>Thank you for your recent message about your headaches. I've reviewed the information you've provided, along with your medical history.</p>
           <p>To help us better understand the pattern and possible causes of your headaches, I’d like to suggest keeping a headache diary for the next 2–3 weeks. This can be really helpful in identifying any triggers or trends, and it will also support us in deciding the most effective next steps and help get specialist if needed.</p>
           <p>You can do the diary in the app from the <a href="/v2/diary/">homescreen</a>. But we'll also send you a notification weekly to check on how you're going</p>
           <p>If you have any questions, <a href="#">reply to this messsage</a> or give us a call</p>
+
+          <p>
+            <strong>Dr Smith</strong><br> 
+            Consultant, Greatwood Hospital
+          </p>
         </div>
 
       </div>
