--- a/app/views/v2/mri/message.html
+++ b/app/views/v2/mri/message.html
@@ -25,11 +25,17 @@
       
       <div class="nhsuk-u-margin-bottom-7">
 
+        <small>Dr Smith (Consultant, Greatwood Hospital)</small>
         <div class="message-container">
 
           <p>Hi Alex,</p>
+          <p>It's Dr Smith from Greatwood Hospital. Your GP, Dr Patel messaged me and sent across your headache diary.</p>
           <p>Thank you for filling in the headache diary. Please continue to do so. It's been really helpful and I hope you've found it useful.</p>
-          <p>I’ve spoken with the neurology team at Greatwood Hospital about your headaches. They’ve recommended you have an MRI scan to help us look into things further.</p>
+          <p>I think the best next step is to do an MRI scan. Just to rule out anything else going on.</p>
+          <p>
+            <strong>Dr Smith</strong><br> 
+            Consultant, Greatwood Hospital
+          </p>
         </div>
 
         {{ nhsappCardGroup({
@@ -48,12 +54,17 @@
 
 
         <hr>
+        <small>Dr Patel (GP)</small>
         <div class="message-container">
           <p>Hi Alex,</p>
           <p>Thank you for your recent message about your headaches. I've reviewed the information you've provided, along with your medical history.</p>
           <p>To help us better understand the pattern and possible causes of your headaches, I’d like to suggest keeping a headache diary for the next 2–3 weeks. This can be really helpful in identifying any triggers or trends, and it will also support us in deciding the most effective next steps and help get specialist if needed.</p>
           <p>You can do the diary in the app from the <a href="/v2/diary/">homescreen</a>. But we'll also send you a notification weekly to check on how you're going</p>
           <p>If you have any questions, <a href="#">reply to this messsage</a> or give us a call</p>
+          <p>
+            <strong>Dr Patel</strong><br> 
+            GP, Riverside Surgery
+          </p>
         </div>
 
       </div>
