--- a/app/views/v2/mdt/message.html
+++ b/app/views/v2/mdt/message.html
@@ -5,7 +5,7 @@
 {% set backLink = true %}
 {% set backLinkURL = "/pages/messages/your-messages" %}
 
-{% set pageHeading = "Range Surgery" %}
+{% set pageHeading = "Help with headaches" %}
 {% set pageDescription = "Received today at 1:02pm" %}
 
 {% block content %}
@@ -22,30 +22,55 @@
         descriptionMuted: true
       })}}
 
+      
       <div class="nhsuk-u-margin-bottom-7">
-        <p>We have reviewed your records and the recent MRI scan. In discussion with specialists at Greatwood Hospital, we feel that we should try adjusting <a href="/v2/mdt/noti">your prescription</a> as the dose strength can cause headaches.
-        </p>
 
-        <p>We'll check in to see if the new prescription makes a difference and work form there.</p>
+        <small>Dr Smith (Consultant, Greatwood Hospital)</small>
+        <div class="message-container">
 
-        <p>If you have any questions, you can contact us and we can discuss your updated plan.</p>
+          <p>Hi Alex,</p>
+          <p>Thank you for coming in for the scan. I've reviewed your scans and there are no red flags, which is reassuring.</p>
+          <p>Having discussed your headache pattern with your GP, Dr Patel, we think that there is likely a pattern being caused by the dose of one of the medicines you're on</p>
+          <p>My recommendation is a small change in dose which should hopefully break the cycle of headaches.</p>
+          <p>Dr Patel will arrange for a change in your <a href="/v2/mdt/noti">prescription</a></p>
 
-        <p>You'll be notified when your updated prescription is ready to pick up</p>
+          <p>
+            <strong>Dr Smith</strong><br> 
+            Consultant, Greatwood Hospital
+          </p>
+
+        </div>
+
+        <hr>
+
+        <small>Dr Smith (Consultant, Greatwood Hospital)</small>
+        <div class="message-container">
+
+          <p>Hi Alex,</p>
+          <p>It's Dr Smith from Greatwood Hospital. Your GP, Dr Patel messaged me and sent across your headache diary.</p>
+          <p>Thank you for filling in the headache diary. Please continue to do so. It's been really helpful and I hope you've found it useful.</p>
+          <p>I think the best next step is to do an MRI scan. Just to rule out anything else going on.</p>
+          <p>
+            <strong>Dr Smith</strong><br> 
+            Consultant, Greatwood Hospital
+          </p>
+        </div>
+
+        <hr>
+        <small>Dr Patel (GP)</small>
+        <div class="message-container">
+          <p>Hi Alex,</p>
+          <p>Thank you for your recent message about your headaches. I've reviewed the information you've provided, along with your medical history.</p>
+          <p>To help us better understand the pattern and possible causes of your headaches, I’d like to suggest keeping a headache diary for the next 2–3 weeks. This can be really helpful in identifying any triggers or trends, and it will also support us in deciding the most effective next steps and help get specialist if needed.</p>
+          <p>You can do the diary in the app from the <a href="/v2/diary/">homescreen</a>. But we'll also send you a notification weekly to check on how you're going</p>
+          <p>If you have any questions, <a href="#">reply to this messsage</a> or give us a call</p>
+          <p>
+            <strong>Dr Patel</strong><br> 
+            GP, Riverside Surgery
+          </p>
+        </div>
+
       </div>
-
-      <hr />
-
-
-      {{ nhsappCardGroup({
-        stacked: true,
-        classes: "app-cards--secondary",
-        cards: [
-          {
-            title: "View full details of discussion between Range Surgery and Greatwood Hospital",
-            href: "#"
-          }
-        ]
-      }) }}
 
     </div>
   </div>
