--- a/app/views/v2/pifu/message.html
+++ b/app/views/v2/pifu/message.html
@@ -2,9 +2,6 @@
 
 {% set hub = "Messages" %}
 
-{% set backLink = true %}
-{% set backLinkURL = "/pages/messages/your-messages" %}
-
 {% set pageHeading = "Help with headaches" %}
 {% set pageDescription = "Received today at 1:02pm" %}
 
@@ -51,7 +48,7 @@
           <p>Thank you for coming in for the scan. I've reviewed your scans and there are no red flags, which is reassuring.</p>
           <p>Having discussed your headache pattern with your GP, Dr Patel, we think that there is likely a pattern being caused by the dose of one of the medicines you're on</p>
           <p>My recommendation is a small change in dose which should hopefully break the cycle of headaches.</p>
-          <p>Dr Patel will arrange for a change in your <a href="/v2/mdt/noti">prescription</a></p>
+          <p>Dr Patel will arrange for a change in your <a href="#">prescription</a></p>
 
           <p>
             <strong>Dr Smith</strong><br> 
