--- a/app/views/v2/mri/confirmed.html
+++ b/app/views/v2/mri/confirmed.html
@@ -14,8 +14,8 @@
       }) }}
 
       <p class="nhsuk-u-font-size-24">
-        <span class="nhsuk-u-visually-hidden">Date: </span>{{ data['appointment-date'] or 'Wednesday 29 May 2024' }}<br>
-        <span class="nhsuk-u-visually-hidden">Time: </span>{{ data['appointment-time'] or '9:00am' }}</span>
+        <span class="nhsuk-u-visually-hidden">Date: </span>Wednesday 16 July 2025<br>
+        <span class="nhsuk-u-visually-hidden">Time: </span>{{ data['appointment-time'] or '8:00am' }}</span>
       </p>
       <hr class="nhsuk-section-break nhsuk-section-break--m nhsuk-section-break--visible">
       <p>
@@ -34,7 +34,7 @@
           {
             headingText: "Appointment booked",
             isPastItem: true,
-            text: "8 June 2024"
+            text: "14 July 2025"
           },
           {
             headingText: "Current status",
